<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>vavi</groupId>
  <artifactId>vavi-nio-file-cyberduck</artifactId>
  <version>0.0.12</version>

  <url>https://github.com/umjammer/vavi-nio-file-cyberduck</url>
  <scm>
    <url>https://github.com/umjammer/vavi-nio-file-cyberduck</url>
  </scm>
  <name>vavi-nio-file-cyberduck</name>

  <properties>
    <cyberduck.version>8.7.3</cyberduck.version>
    <vavi-nio-file-base.groupId>com.github.umjammer</vavi-nio-file-base.groupId> <!-- com.github.fge / com.github.umjammer -->
    <vavi-nio-file-base.version>0.0.14v</vavi-nio-file-base.version>
    <vavi-net-fuse.groupId>com.github.umjammer.vavi-apps-fuse</vavi-net-fuse.groupId> <!-- vavi / com.github.umjammer.vavi-apps-fuse -->
    <vavi-net-fuse.version>0.1.9</vavi-net-fuse.version>
  </properties>

  <profiles>
    <profile>
      <id>local (not on CI)</id>
      <activation>
        <file>
          <exists>${basedir}/local.properties</exists>
        </file>
        <property>
          <name>env.JITPACK</name>
          <value>!true</value>
        </property>
      </activation>
      <build>
        <plugins>
          <plugin>
            <groupId>org.codehaus.mojo</groupId>
            <artifactId>properties-maven-plugin</artifactId>
            <version>1.0.0</version>
            <executions>
              <execution>
                <phase>initialize</phase>
                <goals>
                  <goal>read-project-properties</goal>
                </goals>
                <configuration>
                  <files>
                    <file>${basedir}/local.properties</file>
                  </files>
                </configuration>
              </execution>
            </executions>
          </plugin>
          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-surefire-plugin</artifactId>
            <version>3.2.2</version>
            <configuration>
              <environmentVariables>
                <TEST_WEBDAV_ACCOUNT>${test.webdav.account}</TEST_WEBDAV_ACCOUNT>
                <TEST_WEBDAV_PASSWORD>${test.webdav.password}</TEST_WEBDAV_PASSWORD>
                <TEST_WEBDAV_HOST>${test.webdav.host}</TEST_WEBDAV_HOST>
                <TEST_WEBDAV_PORT>${test.webdav.port}</TEST_WEBDAV_PORT>
                <TEST_WEBDAV_PATH>${test.webdav.path}</TEST_WEBDAV_PATH>
                <TEST_SFTP_ACCOUNT>${test.sftp.account}</TEST_SFTP_ACCOUNT>
                <TEST_SFTP_PASSPHRASE>${test.sftp.passPhrase}</TEST_SFTP_PASSPHRASE>
                <TEST_SFTP_HOST>${test.sftp.host}</TEST_SFTP_HOST>
                <TEST_SFTP_KEYPATH>${test.sftp.keyPath}</TEST_SFTP_KEYPATH>
                <TEST_SFTP_PATH>${test.sftp.path}</TEST_SFTP_PATH>
              </environmentVariables>
              <argLine>-Djava.util.logging.config.file=${project.build.testOutputDirectory}/logging.properties</argLine>
              <trimStackTrace>false</trimStackTrace>
            </configuration>
          </plugin>
        </plugins>
      </build>
    </profile>
    <profile>
      <id>github workflow</id>
      <activation>
        <property>
          <name>env.GITHUB_WORKFLOW</name>
        </property>
      </activation>
      <build>
        <plugins>
          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-surefire-plugin</artifactId>
            <version>3.2.2</version>
            <configuration>
              <argLine>-Djava.util.logging.config.file=${project.build.testOutputDirectory}/logging.properties</argLine>
              <trimStackTrace>false</trimStackTrace>
            </configuration>
          </plugin>
        </plugins>
      </build>
    </profile>
  </profiles>

  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.11.0</version>
        <configuration>
          <release>17</release>
        </configuration>
      </plugin>
    </plugins>
  </build>

  <repositories>
    <repository>
      <id>jitpack.io</id>
      <url>https://jitpack.io</url>
    </repository>
    <repository>
      <id>maven.cyberduck.io-release</id>
      <url>https://s3-eu-west-1.amazonaws.com/repo.maven.cyberduck.io/releases</url>
    </repository>
  </repositories>

  <dependencyManagement>
    <dependencies>
      <dependency>
        <groupId>org.junit</groupId>
        <artifactId>junit-bom</artifactId>
        <version>5.10.1</version>
        <type>pom</type>
        <scope>import</scope>
      </dependency>
    </dependencies>
  </dependencyManagement>

  <dependencies>
    <dependency>
      <groupId>ch.cyberduck</groupId>
      <artifactId>core</artifactId>
      <version>${cyberduck.version}</version>
      <!--
        cyberduck uses "slf4j -> log4j" and "jul -> slf4j".
        i removed those backend and bridge for specifying a backend by myself.
        2024-02-09 cyberduck starts using log4j partly???
      -->
      <exclusions>
        <exclusion>
          <groupId>org.slf4j</groupId>
          <artifactId>slf4j-log4j12</artifactId>
        </exclusion>
        <exclusion>
          <groupId>org.slf4j</groupId>
          <artifactId>jul-to-slf4j</artifactId>
        </exclusion>
        <exclusion>
          <groupId>org.apache.logging.log4j</groupId>
          <artifactId>log4j-slf4j-impl</artifactId>
        </exclusion>
        <exclusion>
          <groupId>org.codehaus.jackson</groupId>
          <artifactId>jackson-core-asl</artifactId>
        </exclusion>
        <exclusion>
          <groupId>org.codehaus.jackson</groupId>
          <artifactId>jackson-mapper-asl</artifactId>
        </exclusion>
        <exclusion>
          <artifactId>guava</artifactId>
          <groupId>com.google.guava</groupId>
        </exclusion>
      </exclusions>
    </dependency>
<dependency>
  <artifactId>guava</artifactId>
  <groupId>com.google.guava</groupId>
  <version>32.0.0-jre</version>
</dependency>
    <dependency>
      <groupId>ch.cyberduck</groupId>
      <artifactId>webdav</artifactId>
      <version>${cyberduck.version}</version>
    </dependency>
    <dependency>
      <groupId>ch.cyberduck</groupId>
      <artifactId>ssh</artifactId>
      <version>${cyberduck.version}</version>
    </dependency>

    <dependency>
      <!-- cyberduck logging (slf4j) backend -->
      <groupId>org.slf4j</groupId>
      <artifactId>slf4j-jdk14</artifactId>
      <version>1.7.36</version>
    </dependency>

    <dependency>
      <groupId>${vavi-nio-file-base.groupId}</groupId>
      <artifactId>vavi-nio-file-base</artifactId>
      <version>${vavi-nio-file-base.version}</version>
    </dependency>
    <dependency>
      <groupId>com.github.umjammer.vavi-net-auth</groupId> <!-- vavi / com.github.umjammer.vavi-net-auth -->
      <artifactId>vavi-net-auth-common</artifactId>
      <version>0.1.9</version>
    </dependency>

    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter-api</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter-engine</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.junit.platform</groupId>
      <artifactId>junit-platform-commons</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter-params</artifactId>
      <scope>test</scope>
    </dependency>

    <dependency>
      <groupId>${vavi-nio-file-base.groupId}</groupId>
      <artifactId>vavi-nio-file-base</artifactId>
      <version>${vavi-nio-file-base.version}</version>
      <type>test-jar</type>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>com.rainerhahnekamp</groupId>
      <artifactId>sneakythrow</artifactId>
      <version>1.2.0</version>
      <scope>test</scope>
    </dependency>

    <dependency>
      <groupId>${vavi-net-fuse.groupId}</groupId>
      <artifactId>vavi-net-fuse</artifactId>
      <version>${vavi-net-fuse.version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>${vavi-net-fuse.groupId}</groupId>
      <artifactId>vavi-net-fuse</artifactId>
      <version>${vavi-net-fuse.version}</version>
      <type>test-jar</type>
      <scope>test</scope>
    </dependency>
  </dependencies>
</project>
